update bug fix